--- a/.github/workflows/output-env-if-secret-environment.yml
+++ b/.github/workflows/output-env-if-secret-environment.yml
@@ -37,7 +37,7 @@ jobs:
   Read-Secret-Env:
     runs-on: ubuntu-latest
     env:
-      JOB_ENV: tta_in_my_heart
+      JOB_ENV: ${{github.repository_owner}}
     steps:
       - name: Print DUY_SECRET_NAME
         run: echo "${{secrets.DUY_SECRET_NAME}}"
