--- a/cmake/ExternalCMakeLists.txt.in
+++ b/cmake/ExternalCMakeLists.txt.in
@@ -9,13 +9,13 @@ ExternalProject_Add(
     TMP_DIR     ${CMAKE_CURRENT_BINARY_DIR}/tmp
     GIT_REPOSITORY @EX_PROJ_REPO@
     GIT_TAG @EX_PROJ_BRANCH@
-    GIT_SHALLOW YES
-    GIT_PROGRESS YES
-    GIT_SUBMODULES_RECURSE YES
-    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX:PATH=@CMAKE_INSTALL_PREFIX@/external" "-DCMAKE_BUILD_TYPE=@CMAKE_BUILD_TYPE@"
-    USES_TERMINAL_DOWNLOAD YES
-    USES_TERMINAL_UPDATE YES
-    USES_TERMINAL_CONFIGURE YES
-    USES_TERMINAL_BUILD YES
-    USES_TERMINAL_INSTALL YES
+    GIT_SHALLOW @EX_PROJ_SHALLOW@
+    GIT_PROGRESS ON
+    GIT_SUBMODULES_RECURSE ON
+    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX:PATH=@EXTERNAL_INSTALL_PREFIX@" "-DCMAKE_BUILD_TYPE=@CMAKE_BUILD_TYPE@"
+    USES_TERMINAL_DOWNLOAD ON
+    USES_TERMINAL_UPDATE ON
+    USES_TERMINAL_CONFIGURE ON
+    USES_TERMINAL_BUILD ON
+    USES_TERMINAL_INSTALL ON
 )
