--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,18 +1,7 @@
 project(Catch-test)
 
-read_deps_json()
-
 build_external_project(
-    BRANCHES
-    ${PKG_BRANCHES}
-    LABELS
-    ${PKG_LABELS}
-    REPOS
-    ${PKG_REPOS}
-    FIRST_INDX
-    0
-    LAST_INDX
-    ${PKG_LAST_INDEX}
+    READ_FROM_JSON
     )
 
 list(APPEND CMAKE_PREFIX_PATH ${EXTERNAL_INSTALL_PREFIX})
