--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,34 @@
     },
     "files.associations": {
         "memory": "cpp"
+    },
+    "terminal.integrated.profiles.windows": {
+        "PowerShell": {
+            "source": "PowerShell",
+            "icon": "terminal-powershell"
+        },
+        "Command Prompt": {
+            "path": [
+                "${env:windir}\\Sysnative\\cmd.exe",
+                "${env:windir}\\System32\\cmd.exe"
+            ],
+            "args": [],
+            "icon": "terminal-cmd"
+        },
+        "Git Bash": {
+            "source": "Git Bash"
+        },
+        "bash (MSYS2)": {
+            "path": "E:\\Software\\msys64\\usr\\bin\\bash.exe",
+            "args": ["--login", "-i"],
+            "env": { "CHERE_INVOKING": "1" }
+        },
+        "MSYS2 UCRT": {
+            "path": "cmd.exe",
+            "args": [
+                "/c",
+                "${env:msys_root}\\msys2_shell.cmd -defterm -here -no-start -ucrt64"
+            ]
+        }
     }
 }
