--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,6 +4,8 @@ add_executable(${PROJECT_NAME} app.cpp)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE base)
 
+set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
+
 install(
     TARGETS ${PROJECT_NAME}
     RUNTIME CONFIGURATIONS Debug Release
