--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,5 +79,5 @@ jobs:
         if: ${{always() && steps.document.outcome == 'success' && github.ref_name == 'main'}}
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY  }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/html
