--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,8 @@
 project(Catch-test)
 
+include(CTest)
+enable_testing()
+
 add_executable(${PROJECT_NAME} test.cpp)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE base)
@@ -8,9 +11,9 @@ target_link_libraries(${PROJECT_NAME} PRIVATE Catch2WithMain)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
 
-list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
-include(Catch)
-catch_discover_tests(${PROJECT_NAME})
+# list(APPEND CMAKE_MODULE_PATH ${Catch2_SOURCE_DIR}/extras)
+# include(Catch)
+# catch_discover_tests(${PROJECT_NAME})
 
 install(
     TARGETS ${PROJECT_NAME}
