--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ set(CMAKE_MESSAGE_LOG_LEVEL VERBOSE)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 set(CMAKE_EXECUTE_PROCESS_COMMAND_ECHO STDERR)
 
-set(INSTALL_CONFIG_DIR ${CMAKE_INSTALL_INCLUDEDIR}/cmake/${PROJECT_NAME})
+set(INSTALL_CONFIG_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
 set(GRAPH_OUTPUT_NAME graph)
 set(BASE_NAME base)
 
