--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.26)
 
 # set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
-project(
-    ZooClass
-    VERSION 0.0.1
-    LANGUAGES C CXX
-    )
+
+if(PROJECT_NAME)
+    set(SUBPROJECT ON)
+else(PROJECT_NAME)
+    set(SUBPROJECT OFF)
+    project(
+        ZooClass
+        VERSION 0.0.1
+        LANGUAGES C CXX
+        )
+endif()
 
 include(GNUInstallDirs)
 include(FetchContent)
@@ -27,7 +33,7 @@ set(BASE_NAME base)
 
 option(ENABLE_CMAKE_FORMAT "enable cmake format" ON)
 option(ENABLE_DOCUMENT_TARGET "enable document target" ON)
-option(ENABLE_MOVE_DOCS_TO_INSTALL "enable moving files in docs directory to the install directory" ON)
+option(ENABLE_INSTALL_GRAPH_AND_DOC "enable moving files in docs directory to the install directory" ON)
 
 if(WIN32)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
@@ -43,26 +49,25 @@ foreach(build_type IN LISTS CMAKE_CONFIGURATION_TYPES)
 endforeach()
 
 include(Tools)
-add_cmake_format_target()
-
-include(CustomTarget)
-add_gen_doc()
+include(GraphAndDoc)
+include(External)
 
 build_external_project(READ_FROM_JSON SUB_PROJECT)
 
 add_subdirectory(src)
+add_subdirectory(test)
 
-#add_subdirectory(test)
-
-configure_package_config_file(
-    ${CMAKE_CURRENT_LIST_DIR}/cmake/ZooClassConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/ZooClassConfig.cmake
-    INSTALL_DESTINATION ${INSTALL_CONFIG_DIR}
-    )
-
-write_basic_package_version_file(
-    "${CMAKE_CURRENT_BINARY_DIR}/ZooClassConfigVersion.cmake" COMPATIBILITY SameMajorVersion
-    )
-
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ZooClassConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/ZooClassConfigVersion.cmake
-        DESTINATION ${INSTALL_CONFIG_DIR}
+if(NOT SUBPROJECT)
+    configure_package_config_file(
+        ${CMAKE_CURRENT_LIST_DIR}/cmake/ZooClassConfig.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/ZooClassConfig.cmake
+        INSTALL_DESTINATION ${INSTALL_CONFIG_DIR}
         )
+
+    write_basic_package_version_file(
+        "${CMAKE_CURRENT_BINARY_DIR}/ZooClassConfigVersion.cmake" COMPATIBILITY SameMajorVersion
+        )
+
+    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/ZooClassConfig.cmake
+                  ${CMAKE_CURRENT_BINARY_DIR}/ZooClassConfigVersion.cmake DESTINATION ${INSTALL_CONFIG_DIR}
+            )
+endif(NOT SUBPROJECT)
