--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,7 @@ add_executable(${PROJECT_NAME} test.cpp)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE base)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE Catch2WithMain)
+target_link_libraries(${PROJECT_NAME} PRIVATE Catch2::Catch2)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
 
@@ -20,6 +20,4 @@ install(
     RUNTIME CONFIGURATIONS Debug Release
             DESTINATION ${CMAKE_INSTALL_BINDIR}
             COMPONENT Runtime
-    PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PrivateHeader
-    PUBLIC_HEADER COMPONENT PublicHeader DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
     )
