--- a/cmake/ExternalAddSub.txt.in
+++ b/cmake/ExternalAddSub.txt.in
@@ -1,21 +1,10 @@
-ExternalProject_Add(
+FetchContent_Declare(
     @EXTERNAL_LABEL@
-    PREFIX @EXTERNAL_DIR@
-    SOURCE_DIR  @EXTERNAL_DIR@/@EXTERNAL_LABEL@/src
-    BINARY_DIR  @EXTERNAL_DIR@/@EXTERNAL_LABEL@/build
-    STAMP_DIR   @EXTERNAL_DIR@/@EXTERNAL_LABEL@/stamp
-    TMP_DIR     @EXTERNAL_DIR@/@EXTERNAL_LABEL@/tmp
     GIT_REPOSITORY @EXTERNAL_REPO@
     GIT_TAG @EXTERNAL_BRANCH@
     GIT_SHALLOW @EXTERNAL_SHALLOW@
     GIT_PROGRESS ON
     GIT_SUBMODULES_RECURSE ON
-    CONFIGURE_COMMAND ""
-    BUILD_COMMAND ""
-    INSTALL_COMMAND ""
-    USES_TERMINAL_DOWNLOAD ON
-    USES_TERMINAL_UPDATE ON
-    USES_TERMINAL_CONFIGURE ON
-    USES_TERMINAL_BUILD ON
-    USES_TERMINAL_INSTALL ON
+    FIND_PACKAGE_ARGS 
 )
+FetchContent_MakeAvailable(@EXTERNAL_LABEL@)
