--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,7 +1,8 @@
 name: Test on Windows
 on:
+  workflow_dispatch:
   push:
-    branches: dev*
+    branches: [dev*]
 jobs:
   Configuration:
     runs-on: windows-latest
@@ -32,5 +33,5 @@ jobs:
         run: cmake --build --preset=windows-document
       - name: Install
         run: cmake --build --preset=windows-install
-      # - name: Test
-      #   run: ctest --preset=windows
+      - name: Test
+        run: ctest --preset=windows
