--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,17 @@
         "--config-file",
         "${workspaceFolder}/.cmake-format.yaml"
     ],
+    "[yaml]": {
+        "editor.insertSpaces": true,
+        "editor.tabSize": 2,
+        "editor.autoIndent": "keep",
+        "diffEditor.ignoreTrimWhitespace": false,
+        "editor.quickSuggestions": {
+            "other": true,
+            "comments": false,
+            "strings": true
+        }
+    },
     "cmake.configureOnEdit": false,
     "cmake.configureOnOpen": false,
     "files.associations": {
