--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Make Output
         id: out
-        run: echo "list-file=$(ls)" >> $GITHUB_OUTPUT
+        run: echo "list-file=$(find -maxdepth 1 -type f -name '.gitig*')" >> $GITHUB_OUTPUT
   Print-Output:
     runs-on: ubuntu-latest
     needs: ["Generate-Output"]
