--- a/.github/workflows/reusable-ubuntu.yml
+++ b/.github/workflows/reusable-ubuntu.yml
@@ -21,6 +21,8 @@ jobs:
           pip install ninja
           sudo apt-get install graphviz pkg-config
           sudo apt-get install dos2unix
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Configure
         run: make config-ubuntu
       - name: Build
