--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,21 +23,24 @@ on:
       - ".github/workflows/main.yml"
 jobs:
   configure-and-build:
-    runs-on: ubuntu-22.04
-    permissions:
-      contents: write
-    steps:
-      - name: build project
-        uses: ./.github/workflows/reusable-ubuntu.yml
-        with:
-          target: ${{inputs.target}}
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: app
-          path: out/install/ubuntu
-      - name: Deloy GitHub Page
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/html
+    uses: ./.github/workflows/reusable-ubuntu.yml
+    with:
+      target: ${{inputs.target}}
+    # runs-on: ubuntu-22.04
+    # permissions:
+    #   contents: write
+    # steps:
+    #   - name: build project
+    #     uses: ./.github/workflows/reusable-ubuntu.yml
+    #     with:
+    #       target: ${{inputs.target}}
+    #   - name: Upload artifact
+    #     uses: actions/upload-artifact@v3
+    #     with:
+    #       name: app
+    #       path: out/install/ubuntu
+    #   - name: Deloy GitHub Page
+    #     uses: peaceiris/actions-gh-pages@v3
+    #     with:
+    #       github_token: ${{ secrets.GITHUB_TOKEN }}
+    #       publish_dir: ./docs/html
