--- a/cmake/ExternalAdd.txt.in
+++ b/cmake/ExternalAdd.txt.in
@@ -1,11 +1,11 @@
 ExternalProject_Add(
-    @EXTERNAL_LABEL@
-    GIT_REPOSITORY @EXTERNAL_REPO@
-    GIT_TAG @EXTERNAL_BRANCH@
-    GIT_SHALLOW @EXTERNAL_SHALLOW@
+    @PKG_LABEL@
+    GIT_REPOSITORY @PKG_REPO@
+    GIT_TAG @PKG_TAG@
+    GIT_SHALLOW @PKG_SHALLOW@
     GIT_PROGRESS ON
     GIT_SUBMODULES_RECURSE ON
-    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX:PATH=@EXTERNAL_INSTALL_PREFIX@" "-DCMAKE_BUILD_TYPE=@CMAKE_BUILD_TYPE@"
+    CMAKE_ARGS "-DCMAKE_INSTALL_PREFIX:PATH=@PKG_INSTALL_PREFIX@" "-DCMAKE_BUILD_TYPE=@CMAKE_BUILD_TYPE@"
     USES_TERMINAL_DOWNLOAD ON
     USES_TERMINAL_UPDATE ON
     USES_TERMINAL_CONFIGURE ON
