--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -14,17 +14,9 @@ target_include_directories(
 install(
     TARGETS ${PROJECT_NAME}
     EXPORT ${PROJECT_NAME}-targets
-    RUNTIME CONFIGURATIONS "Debug" "Release"
-            DESTINATION ${CMAKE_INSTALL_BINDIR}
-            COMPONENT Runtime
-    ARCHIVE CONFIGURATIONS "Debug" "Release"
-            DESTINATION ${CMAKE_INSTALL_LIBDIR}
-            COMPONENT Development
+    RUNTIME CONFIGURATIONS "Debug" "Release" DESTINATION ${CMAKE_INSTALL_BINDIR} COMPONENT Runtime
+    ARCHIVE CONFIGURATIONS "Debug" "Release" DESTINATION ${CMAKE_INSTALL_LIBDIR} COMPONENT Development
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT PublicHeader
     )
 
-install(
-    EXPORT ${PROJECT_NAME}-targets
-    DESTINATION ${INSTALL_CONFIG_DIR}
-    NAMESPACE ZooClass::
-    )
+install(EXPORT ${PROJECT_NAME}-targets DESTINATION ${INSTALL_CONFIG_DIR} NAMESPACE ZooClass::)
