--- a/src/base/CMakeLists.txt
+++ b/src/base/CMakeLists.txt
@@ -11,6 +11,46 @@ target_include_directories(
                            $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
     )
 
+build_external_project(
+    FIRST_INDEX 
+        "0"
+    LAST_INDX 
+        "1"
+    REPO 
+        "https://github.com/benhoyt/inih.git"
+        "https://github.com/p-ranav/csv2.git"
+    LABEL 
+        "IniReader"
+        "CSV2"
+    TAG 
+        "master"
+        "master"
+    SHALLOW
+        "ON"
+        "ON"
+    CONFIGURE_COMMAND 
+        "meson setup ./ ${EXTERNAL_DIR}/EP_BASE/Source/IniReader --prefix ${CMAKE_CURRENT_BINARY_DIR}/IniReader"
+        "OFF"
+    CMAKE_AGRS
+        "OFF"
+        "\"-DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}/csv2\" \"-DCMAKE_BUILD_TYPE=@CMAKE_BUILD_TYPE@\""
+    BUILD_COMMAND 
+        "meson compile"
+        "OFF"
+    INSTALL_COMMAND 
+        "meson install"
+        "OFF"
+)
+
+set(ENV{PKG_CONFIG_PATH} "${CMAKE_CURRENT_BINARY_DIR}/IniReader/lib/pkgconfig")
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(LIBINI REQUIRED IMPORTED_TARGET INIReader)
+target_link_libraries(${PROJECT_NAME} PkgConfig::LIBINI)
+
+list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_BINARY_DIR}/csv2)
+find_package(csv2 REQUIRED)
+target_link_libraries(${PROJECT_NAME} csv2::csv2)
+
 install(
     TARGETS ${PROJECT_NAME}
     EXPORT ${PROJECT_NAME}-targets
