--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ set(CMAKE_EXECUTE_PROCESS_COMMAND_ECHO STDOUT)
 set(INSTALL_CONFIG_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
 set(GRAPH_OUTPUT_NAME graph)
 set(BASE_NAME base)
+set(SUBPROJECT_FIRST_TOUCH OFF)
+set(NONSUBPROJECT_FIRST_TOUCH OFF)
 
 if(WIN32)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
