--- a/.github/workflows/output-test.yml
+++ b/.github/workflows/output-test.yml
@@ -18,3 +18,5 @@ jobs:
     steps:
       - name: Print
         run: echo ${{ needs.Generate-Output.outputs.list-file }}
+      - name: Print Github object
+        run: echo ${{toJson(github)}}
