--- a/.github/workflows/ubuntu-test.yml
+++ b/.github/workflows/ubuntu-test.yml
@@ -7,14 +7,15 @@ jobs:
     steps:
       - name: update & install deps
         run: |
-          sudo apt-get install gcc g++ gdb
-          sudo apt-get install make cmake
-          sudo apt-get install git doxygen
-          sudo apt-get install python3 python3-pip
-          pip install cmake-format
-          pip install ninja
-          sudo apt-get install graphviz pkg-config
-          sudo apt-get install dos2unix
+          sudo apt-get update
+          sudo apt-get install -y build-essential
+          sudo apt-get install -y cmake
+          sudo apt-get install -y git doxygen
+          sudo apt-get install -y python3 python3-pip
+          sudo apt-get install -y ninja-build
+          sudo apt-get install -y graphviz pkg-config
+          sudo apt-get install -y dos2unix
+          sudo apt-get install -y cmake-format
       - name: Checkout
         uses: actions/checkout@v3
       - name: Check folder
