--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ set(NONSUBPROJECT_FIRST_TOUCH OFF)
 if(WIN32)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 else()
-    set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_LIBDIR})
+    set(CMAKE_INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
 endif()
 
 foreach(build_type IN LISTS CMAKE_CONFIGURATION_TYPES)
